# Cardinal3D

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: application.cpp  application.h  common.h  main.cpp  platform.cpp  platform.h
src/functional/: overload.h
src/gui/: manager.cpp  manager.h  ui_main_menu_bar.cpp
src/rendering/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rendering.h  scene.cpp  scene.h  scene_mesh.cpp  scene_mesh.h  scene_object.cpp  scene_object.h  shader.cpp  shader.h
src/util/: util.h
src/utility/: overload.h
